# learn-cmake

./: CMakeLists.txt  README.md
01-basic/: CMakeLists.txt  main.cpp
02-sub-projects/: CMakeLists.txt
02-sub-projects/subbinary/: CMakeLists.txt  main.cpp
02-sub-projects/sublibrary1/: CMakeLists.txt
02-sub-projects/sublibrary1/include/sublib1/: sublib1.h
02-sub-projects/sublibrary1/src/: sublib1.cpp
02-sub-projects/sublibrary2/: CMakeLists.txt
02-sub-projects/sublibrary2/include/sublib2/: sublib2.h
03-code-generation/: CMakeLists.txt  main.cpp
03-code-generation/configure-files/: CMakeLists.txt  main.cpp  path.h.in  ver.h.in
03-code-generation/protobuf/: AddressBook.proto  CMakeLists.txt  main.cpp
04-static-analysis/clang-analyzer/: CMakeLists.txt  Readme.txt  run_test.bat
04-static-analysis/clang-analyzer/subproject1/: CMakeLists.txt
04-static-analysis/clang-analyzer/subproject2/: CMakeLists.txt  main2.cpp
src/: Hello.cpp  main.cpp
